--- a/complex/docker-compose.yml
+++ b/complex/docker-compose.yml
@@ -1,26 +1,27 @@
 version: '3'
 services:
-  nginx:
-    restart: always
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./nginx
-    ports:
-      - '3050:80'
   postgres:
     image: 'postgres:latest'
     environment:
       - POSTGRES_PASSWORD=postgres_password
   redis:
     image: 'redis:latest'
+  nginx:
+    depends_on:
+      - api
+      - client
+    restart: always
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./nginx
+    ports:
+      - '3050:80'
   api:
     build:
       dockerfile: Dockerfile.dev
       context: ./server
     volumes:
-      # folder will be exempted from mapping below
       - /app/node_modules
-      # changes to local files in /server are reflected in /app in the container
       - ./server:/app
     environment:
       - REDIS_HOST=redis
